syntax = "proto3";

option go_package = "module/common/user_suggestions";

package user_suggestions;

import "google/api/annotations.proto";

service UserSuggestionsService{
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/suggestions/user"
      body: "user"
    };
  }

  rpc GetAll(GetAllRequest) returns (GetAllResponse){
    option (google.api.http) = {
      get: "/suggestions"
    };
  }
}

message RegisterRequest {
  User user = 1;
}

message RegisterResponse{
  int64 id = 1;
}

message GetAllRequest {

}

message GetAllResponse{
  repeated User users = 1;
}

message User{
  string Id = 1;
  string username = 2;
  string firstName = 3;
  string email = 4;
  string interests = 5;
}